<resources>
    <string name="app_name">SimpleCalendar</string>
    <string name="calendar_widget_description">A simple calendar</string>

    <string name="calendarYearMonth">%1$d年%2$d月</string>

    <string-array name="emptyArray" />
    <string name="Confirm">確定</string>
    <string name="Cancel">取消</string>
    <string name="Close">關閉</string>
    <string name="Edit">編輯</string>
    <string name="Delete">刪除</string>
    <string name="DeleteConfirm">確定要刪除嗎?</string>

    <!--  list editor  -->
    <string name="listEditorGroup">名稱</string>
    <string name="listEditorAddItem">新增項目</string>
    <string name="listEditorRemoveItem">刪除所選</string>
    <string name="listEditorColor">顏色</string>
    <string name="listEditorAttachCalendar">附加至月曆</string>
    <string name="listEditorEditCalendar">修改附加的月曆</string>


    <!--  calendar editor  -->
    <string name="calendarEditorContent">內容</string>
    <string name="calendarEditorDate">日期</string>
    <string name="calendarEditorTime">時間</string>
    <string name="calendarEditorRemark">備註</string>
    <string name="calendarEditorColor">顏色</string>
    <string name="calendarEditorAddReminder">新增提醒</string>
    <string name="calendarEditorReminderFormat">提醒: %1$d年%2$d月%3$d日%4$d時%5$d分</string>
    <string name="calendarEditorLinkListItem">連結至代辦Id: %1$s</string>


    <!--  calendar viewer  -->
    <string name="calendarShowerTime">時間</string>
    <string name="calendarShowerTimeFormat">%1$d年%2$d月%3$d日%4$d時%5$d分</string>
    <string name="calendarShowerContent">內容</string>
    <string name="calendarShowerRemark">備註</string>
    <string name="calendarShowerReminder">提醒</string>
    <string name="calendarShowerReminderFormat">提醒: %1$d年%2$d月%3$d日%4$d時%5$d分</string>
    <string name="calendarShowerOpenList">開啟連結的代辦</string>

    <!--  list viewer  -->
    <string name="listShowerOpenCalendar">開啟連結的日曆</string>


    <!--  reminder  -->
    <string name="reminder_5m">5分鐘前</string>
    <string name="reminder_10m">10分鐘前</string>
    <string name="reminder_30m">30分鐘前</string>
    <string name="reminder_1h">1小時前</string>
    <string name="reminder_2h">2小時前</string>
    <string name="reminder_12h">12小時前</string>
    <string name="reminder_1d">1天前</string>
    <string name="reminder_2d">2天前</string>
    <string name="reminder_1w">1週前</string>
    <string name="reminder_custom">自訂</string>


    <!--  color editor  -->
    <string name="colorEditorName">名稱</string>
    <string name="colorEditorColor">顏色</string>


    <!--  option menu  -->
    <string name="optionMenuColor">自訂顏色</string>


    <!--  notice  -->
    <string name="noticeChannelName">通知</string>


    <string-array name="defaultColorStringArray">
        <item>#000000</item>
        <item>#FF0000</item>
        <item>#FF7700</item>
        <item>#FFFF00</item>
        <item>#00FF00</item>
        <item>#008800</item>
        <item>#44EEFF</item>
        <item>#0000FF</item>
        <item>#FF00FF</item>
        <item>#990099</item>
    </string-array>

    <string-array name="defaultColorNameArray">
        <item>Black</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Lime</item>
        <item>Green</item>
        <item>Cyan</item>
        <item>Blue</item>
        <item>Magenta</item>
        <item>Purple</item>
    </string-array>

</resources>