<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reminderRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/reminder_5m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/reminder_5m" />

        <RadioButton
            android:id="@+id/reminder_10m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder_10m" />

        <RadioButton
            android:id="@+id/reminder_30m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder_30m" />

        <RadioButton
            android:id="@+id/reminder_1h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder_1h" />

        <RadioButton
            android:id="@+id/reminder_2h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder_2h" />

        <RadioButton
            android:id="@+id/reminder_12h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder_12h" />

        <RadioButton
            android:id="@+id/reminder_1d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder_1d" />

        <RadioButton
            android:id="@+id/reminder_2d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder_2d" />

        <RadioButton
            android:id="@+id/reminder_1w"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder_1w" />

        <RadioButton
            android:id="@+id/reminder_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder_custom" />

    </RadioGroup>

    <Spinner
        android:id="@+id/reminderYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/reminderMonth"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Spinner
        android:id="@+id/reminderMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/reminderDay"
        app:layout_constraintStart_toEndOf="@+id/reminderYear"
        app:layout_constraintTop_toTopOf="@+id/reminderYear" />

    <Spinner
        android:id="@+id/reminderDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/reminderMonth"
        app:layout_constraintTop_toTopOf="@+id/reminderMonth" />

    <Spinner
        android:id="@+id/reminderHour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/reminderMinute"
        app:layout_constraintStart_toStartOf="@+id/reminderYear"
        app:layout_constraintTop_toBottomOf="@+id/reminderYear" />

    <Spinner
        android:id="@+id/reminderMinute"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/reminderDay"
        app:layout_constraintStart_toEndOf="@+id/reminderHour"
        app:layout_constraintTop_toTopOf="@+id/reminderHour" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/calendarEditorDate"
        app:layout_constraintBottom_toBottomOf="@+id/reminderYear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reminderYear" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendarEditorTime"
        app:layout_constraintBottom_toBottomOf="@+id/reminderHour"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/reminderHour" />

    <Button
        android:id="@+id/reminderCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reminderConfirm"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reminderConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reminderCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>