<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".list.ListItemShower">

    <org.lf.calendar.list.ListItem
        android:id="@+id/listShowerItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/listShowerAttach"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/listShowerAttach"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="@string/listShowerOpenCalendar"
        app:layout_constraintBottom_toTopOf="@+id/listShowerEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/listShowerEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/listShowerClose"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/listShowerClose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listShowerEdit" />
</androidx.constraintlayout.widget.ConstraintLayout>