<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calendar.CalendarEditor">

    <Spinner
        android:id="@+id/calendarEditorYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/calendarEditorMonth"
        app:layout_constraintStart_toStartOf="@+id/calendarEditorContent"
        app:layout_constraintTop_toBottomOf="@+id/calendarEditorContent" />

    <Spinner
        android:id="@+id/calendarEditorMonth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/calendarEditorDay"
        app:layout_constraintStart_toEndOf="@+id/calendarEditorYear"
        app:layout_constraintTop_toTopOf="@+id/calendarEditorYear" />

    <Spinner
        android:id="@+id/calendarEditorDay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/calendarEditorContent"
        app:layout_constraintStart_toEndOf="@+id/calendarEditorMonth"
        app:layout_constraintTop_toTopOf="@+id/calendarEditorMonth" />

    <Spinner
        android:id="@+id/calendarEditorHour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/calendarEditorMinute"
        app:layout_constraintStart_toStartOf="@+id/calendarEditorYear"
        app:layout_constraintTop_toBottomOf="@+id/calendarEditorYear" />

    <Spinner
        android:id="@+id/calendarEditorMinute"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/calendarEditorMonth"
        app:layout_constraintStart_toEndOf="@+id/calendarEditorHour"
        app:layout_constraintTop_toTopOf="@+id/calendarEditorHour" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/calendarEditorContent"
        app:layout_constraintBottom_toBottomOf="@+id/calendarEditorContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/calendarEditorContent" />

    <EditText
        android:id="@+id/calendarEditorContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/calendarEditorConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/calendarEditorHour"
        app:layout_constraintTop_toBottomOf="@+id/calendarEditorHour">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/calendarEditorRemark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/calendarEditorRemark"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendarEditorDate"
        app:layout_constraintBottom_toBottomOf="@+id/calendarEditorYear"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/calendarEditorYear" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendarEditorTime"
        app:layout_constraintBottom_toBottomOf="@+id/calendarEditorHour"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/calendarEditorHour" />

    <Button
        android:id="@+id/calendarEditorConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calendarEditorCancel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calendarEditorCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calendarEditorConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>